add design works

--- a/design.html
+++ b/design.html
@@ -25,6 +25,8 @@
                             <p>PC Background</p>
                             <img src="images/design/penguin.jpg" alt="" class="img">
                             <img src="images/design/Zen.png" alt="" class="img">
+                            <img src="images/design/collage.jpg" alt="" class="img">
+                            <img src="images/design/blue.jpg" alt="" class="img">
                         </div>
                     </div>
                 </div>
